fix problem with whitespace-matching in IE
darcs-hash:20070321175039-ac2de-448cb4a130445e1a226141bd117913a4d9d99527.gz

--- a/highlight.css
+++ b/highlight.css
@@ -8,6 +8,10 @@
   font-family: monospace;
 }
 
+.editbox p {
+  margin: 0;
+}
+
 span.keyword {
   color: #0044BB;
 }
